WindGroup Dev/src/objects/Inventory_Tracking__c.object
<CustomObject>
    <description>Create to be managed in Procurement process</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Action_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipName>Inventory_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GR_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GR Line Item</label>
        <referenceTo>GR_Line_Item__c</referenceTo>
        <relationshipName>Inventory_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IN_OUT__c</fullName>
        <label>IN/OUT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory_ID__c</fullName>
        <label>Inventory ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Inventory__c.Product_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipName>Inventory_Tracking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Item_Catalogue__c</referenceTo>
        <relationshipName>Inventory_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TExt (Product_Name__r.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From related Product Name</inlineHelpText>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stock_Warehouse_Name__c</fullName>
        <formula>Inventory_ID__r.Stock_Warehouse__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Related Inventory &gt; Stock Name</inlineHelpText>
        <label>Stock/Warehouse Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock/Warehouse</label>
        <referenceTo>Stock__c</referenceTo>
        <relationshipName>Inventory_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory Movement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Inventory_ID__c</columns>
        <columns>Stock_Warehouse_Name__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Date__c</columns>
        <columns>Action__c</columns>
        <columns>IN_OUT__c</columns>
        <columns>Quantity__c</columns>
        <columns>Equipment__c</columns>
        <columns>GR_Line_Item__c</columns>
        <columns>Remarks__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-IT-{000000}</displayFormat>
        <label>Inventory Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Movement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>